--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,3 +14,15 @@ body {
 	font-weight: bold;
 	font-size: 70px;
 }
+
+@media only screen and (max-width: 768px) {
+	body {
+		display: flex;
+		background-color: #0f0f14;
+		align-items: center;
+		margin: 0;
+	}
+
+	.container {
+		font-size: 28px;
+	}
